--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ h2 {
 
 .form-field input {
     height: 3rem;
-    border: 0.05em solid rgb(149, 149, 149);
+    border: 1px solid rgb(149, 149, 149);
     width: 87.5%;
     padding: 0 0.5em;
     font-size: 1.5em;
@@ -120,7 +120,7 @@ h2 {
 
 .form-field input:focus {
     background-color: #fff;
-    border: 0.05em solid rgb(154, 202, 154);
+    border: 1px solid rgb(154, 202, 154);
 }
 
 .form-city, .form-age { 
@@ -161,9 +161,7 @@ h2 {
 
 .spec-checkbox .check-el,
 .spec-radio>.radio-row {
-    border: 0.025em solid rgb(149, 149, 149);
-    border-top: 0.1em solid rgb(149, 149, 149);
-    border-bottom: 0.1em solid rgb(149, 149, 149);
+    border: 1px solid rgb(149, 149, 149);
     display: flex;
     width: 25%;
     align-content: center;
@@ -173,6 +171,7 @@ h2 {
     margin: 0 0.2em 1em 0.2em;
     padding: 0 0.25em;
     border-radius: 20px;
+    transition: all 0.5s ease;
 }
 
 .spec-checkbox .check-el {
@@ -250,7 +249,7 @@ select {
     background-color: #fff;
     width: 80%;
     height: 3em;
-    border: 0.025em solid rgb(149, 149, 149);
+    border: 1px solid rgb(149, 149, 149);
     font-size: 1.25em;
     padding-left: 0.5em;
 }
@@ -264,7 +263,7 @@ select {
 }
 
 .form-field textarea {
-    border: 0.05em solid rgb(149, 149, 149);
+    border: 1px solid rgb(149, 149, 149);
     width: 100%;
     height: 3em;
     padding: 0.5em 0.5em;
@@ -275,14 +274,28 @@ select {
 }
 
 .submit-section {
+    position: relative;
     text-align: center;
     padding: 1rem 0;
     margin-bottom: 1rem;
     background-color: rgb(78, 95, 78);
     color: rgb(203, 228, 203);
+    height: 100px;
     width: 100%;
     align-self: flex-start;
     border: 0;
+    cursor: pointer;
+}
+
+.submit-section:hover {
+    background-color: rgba(78, 95, 78, 0.89);
+}
+
+.submit-section h2 {
+    position: absolute;
+    display: block;
+    width: 100%;
+    text-align: center;
 }
 
 
@@ -345,5 +358,6 @@ select {
 
 
 .hidden {
+    height: 0px;
     display: none;
 }
